# RISC-V-TensorCore

./: CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
experiment/test_our/: our.v  sim_main.cpp
experiment/test_our/obj_dir/: Vour  Vour.cpp  Vour.h  Vour.mk  Vour__ALL.cpp  Vour__ALL.d  Vour__Slow.cpp  Vour__Syms.cpp  Vour__Syms.h  Vour__ver.d  Vour_classes.mk  sim_main.d
src/hw/: VRF.sv  alu.tlv  tensorcore.tlv
src/hw/SV/rtl/: base_ram.v  fifo_queue.v  sc_sram.v  sequencer.v  tc_sram.sv  valu.v  vrf_arbiter.v
src/hw/SV/tb/: sequencer_tb.v
src/tb/: tensorcore_tb.cpp  testbench.hpp  tracer.hpp
